--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -2,3 +2,4 @@ extends _layout/default.pug
 block main
   input(type="checkbox" data-type="checkbox" name="checkbox" value="0" id="checkbox")
   div#text
+  input(type="checkbox" name="checkbox1" value="0" id="checkbox1")
