do not duplicate allready existing clone

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,8 +1,9 @@
 @bg: #e2e2e2;
 @border: 1px solid darken(@bg, 15%);
 
-[type="checkbox"] {
-  display: none;
+
+a:focus {
+  color: red;
 }
 
 .checkbox {
